--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
     android:id="@+id/box"
     android:layout_width="200dp"
     android:layout_height="200dp"
-    android:background="@color/teal"
+    android:background="@color/red"
     android:layout_centerInParent="true"
 
     />
